# OptiX

./: .gitignore  .gitmodules  Makefile  README.md  colorScheme.py  computeReflectionAngle.py  genPlaneReflectionPlots.sh  genmovie.sh  plotFieldCoeff.py  plotFieldComponent.plt  plotFlux.py  pulse.py  runMultiPlaneWave.sh  runPlaneReflection.sh  scatteredEnergy.plt  setupEnv.sh
Coccolith/: .gitignore  CMakeLists.txt  bandStructure.cpp  coccolith.cpp  copyExec.sh  copyRequiredLibraries.sh  cwSolveMWE.cpp  getData.sh  runNotes.md  scatteringCrossSectionSphere.cpp  steadyCoccolith.cpp  testCylindricalBirefringence.cpp
Coccolith/Eikonal/: coccolithEikonal.py  focusingLens.py
Coccolith/InputFiles/: bandStructure.json  crossSectionVSangle.json  highFreqUV.json  parallelBandStructure.json  sphereGeometryDebug.json  visibleLight.json  visibleLightCaCO3ne.json  visibleLightCaCO3ne15deg.json  visibleLightCaCO3ne30deg.json  visibleLightCaCO3ne45deg.json  visibleLightCaCO3neCocco9.json  visibleLightCaCO3neCocco9EdgeFilled.json  visibleLightCaCO3neEdgeFilled.json  visibleLightCaCO3neFilled.json  visibleLightDiatom.json
Coccolith/Materials/: CaCO3.json  CaCO3Data.csv  CaCO3ne.csv  CaCO3ne.json  SiO2.csv  SiO2.json  chlorofyll.txt  chlorophyll.csv  pureStatic.json  water.csv  water.json
Coccolith/Scripts/: SrDistribution.py  bandDiagram.py  checkPolarizationState.py  compareFilling.py  compareRefractiveIndex.py  compareSize.py  computeMueller.py  createSphereVoxels.py  crossSectionAngle.py  crossSectionWithChlorophyll.py  differentAngle.py  extractUnitCell.py  geometry.py  harminvSingle.py  launchBandStrcutureParallel.py  mergeMPIhdf5.py  plotDispersion.py  plotSpectrum.py  polarization.py  reciprocalLattice.py  runMuellerMatrix.py  sphereCrossSection.py  timeEvolutionCrossSection.py
Coccolith/include/: bandStructureSimulation2D.hpp  coccolithSim.hpp  config.h.in  cylindricalBirefringentMaterial.hpp  fieldMonitors.hpp  refractiveIndexMaterial.hpp  steadyCoccoSim.hpp  stokesParameters.hpp  voxelMaterial.hpp  voxelMaterial2D.hpp
Coccolith/src/: CMakeLists.txt  bandStructureSimulation2D.cpp  coccolithSim.cpp  cylindricalBirefringentMaterial.cpp  fieldMonitors.cpp  refractiveIndexMaterial.cpp  steadyCoccoSim.cpp  stokesParameters.cpp  voxelMaterial.cpp  voxelMaterial2D.cpp
Waveguide/: .gitignore  CMakeLists.txt  Makefile  compareTransmission.py  connect.sh  copyExecToServer.sh  createTwoOpposite.py  eigenModeInterference.py  eigenModes.py  fitModeCoefficients.py  harminvPlot.py  incAngleSweep.py  inverseDelta.py  inverseR.py  inverseWidth.py  matprop.py  nearField.py  plotConvergence.py  plotFDPattern.py  plotFDWithGeomRay.py  plotFarField2DWG.py  plotMode.py  plotMultipleTransmission.py  plotSeveralFD.sh  retrieveData.sh  retrieveFigures.sh  retrieveMovie.sh  runNotes.md  server.sh  straightEigenModePerturbation.py  straightEigenmodes.py  transmission.py  transmissionComparePlot.py  waveguideBorder.py
Waveguide/AngleAnalysis/: angleComputer.py  calculateAngles.py  plotTransAngle.py  wpdExtract.py
Waveguide/Applications/: beamSplitSim.cpp  borderDemo.cpp  convergence.cpp  coupledWaveGuideSimulation.cpp  curvedWGCartesian.cpp  cylinderScattering.cpp  farFieldConvergence.cpp  fresnelProp.cpp  layeredSphere.cpp  multiWG.cpp  optimizeBend.cpp  projectOntoEigenmodes.cpp  radialDistribution.cpp  sphereScattering.cpp  straightGuideSweepAngle.cpp  testVisualizer.cpp  waveguide3Dsim.cpp  wgBuilder.py  wgHarmonicInversion.cpp
Waveguide/GeometricalOptics/: circularWG.py  circularWGCartesian.py  rayTraceWG.py
Waveguide/InputFiles/: compareCylCart.json  compareTransmissionCylCrd.json  discCompare.json  exactCoatedSphere.json  exactSphere.json  fresnelPropInp.json  inputFitRefractiveIndex.json  oneWGMultiTest.json  transConvergenceCartCyl.json  transmissionPlot.json  twoOppositeCurvedWG.json
Waveguide/MatProp/: indexRefrSiO2.txt  indexRefrTa.txt  indrxRefC2H6O2.txt
Waveguide/Scripting/: animationDifferentLength.py  compareH5Files.py  compareScatterWithExp.py  connectionConsistency.py  convertDeltaBetaMatToCSV.py  dynScat.py  dynScatGeo.py  exactFarFields.py  farFieldExactSphere.py  fitRefractiveIndex.py  macroSweepAngleLength.sh  multiLayeredSphere.py  multiWGPlot.py  plot3DFields.py  plotMultiWG.py  proj3D.py  transcendentalEqSlab.py  transmissionConvergence.py
Waveguide/doc/: Doxyfile
Waveguide/inc/: absorber.hpp  arraySource.hpp  beamSplitter.hpp  bendOptimizer.hpp  borderTracker.hpp  boundaryCondition.hpp  cladding.hpp  colormaps.hpp  controlFile.hpp  coupledCurvedWG.hpp  crankNicholson.hpp  curvedWGConfMap.hpp  curvedWGConfMapGuideToGuide.hpp  curvedWGCylCrd.hpp  curvedWaveGuide2D.hpp  cylinder2D.hpp  cylindricalParaxialEquation.hpp  exitFieldSource.hpp  farFieldParameters.hpp  fftSolver2D.hpp  fftSolver3D.hpp  fixedValuesSource.hpp  fresnelPropagator.hpp  gaussianBeam.hpp  gaussianWG.hpp  genericScattering.hpp  h5Attribute.hpp  harmonicInversion.hpp  hdf5DataspaceCreator.hpp  incidentAngleLengthSweep.hpp  incidentAngleSweep.hpp  linearMap1D.hpp  linearRampWG.hpp  multipleCurvedWG.hpp  numerovSolver.hpp  paraxialEquation.hpp  paraxialSimulation.hpp  paraxialSource.hpp  planeWave.hpp  postProcessMod.hpp  (+27 more)
Waveguide/src/: CMakeLists.txt  absorber.cpp  alltests.cpp  beamSplitter.cpp  bendOptimizer.cpp  borderTracker.cpp  cladding.cpp  colormaps.cpp  controlFile.cpp  convergence.cpp  coupledCurvedWG.cpp  crancNicholson.cpp  curvedWGCartesian.cpp  curvedWGConfMap.cpp  curvedWGConfMapGuideToGuide.cpp  curvedWGCylCrd.cpp  curvedWaveGuide2D.cpp  cylinder2D.cpp  cylindricalParaxialEquation.cpp  exitFieldSource.cpp  farFieldPost.cpp  fftSolver2D.cpp  fftSolver3D.cpp  fixedValuesSource.cpp  fresnelPropagator.cpp  gaussianBeam.cpp  gaussianWG.cpp  genericScattering.cpp  h5Attribute.cpp  harmonicInversion.cpp  incidentAngleLengthSweep.cpp  incidentAngleSweep.cpp  linearRampWG.cpp  main.cpp  multipleCurvedWG.cpp  numerovSolver.cpp  numerovTest.cpp  paraxialEquation.cpp  paraxialSimulation.cpp  paraxialSource.cpp  (+26 more)
Waveguide/unittest/: alltests.cpp  curvedWaveGuide2DTest.cpp  numerovTest.cpp  (+4 more)
(+158 files in other folders)
